examples/c/error-codes/violates-constraint/nonfatal/CV-TTE4-bad-static.output
CV-TTE4-bad-static.c:6:6: warning: C99 forbids conditional expressions with only one void side [-Wpedantic]
 5 ? (void)5 : (signed char)6;
     ^~~~~~~
1 warning generated.
CV-TTE4-bad-static.c:6:2: error: if one of a conditional expression's branches has void type, the other must also have void type.

    Constraint violation (CV-TTE4):
        see C11 section 6.5.15:3 http://rvdoc.org/C11/6.5.15
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

